<resources>
    <string name="app_name">Kartierpartner</string>
    <string name="action_menu">Project</string>
    <string name="action_settings">Settings</string>
    <string name="action_change">Change Project</string>
    <string name="action_add_formation">Add new Formation</string>
    <string name="title_activity_gps_logging">GPS tracking</string>
    <string name="title_activity_boundary">Measure a boundary</string>
    <string name="title_activity_measure_boundary">Measure a Boundary</string>
    <string name="title_activity_change">Change Project</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_strike_dip">Strike and Dip</string>
    <string name="gps_wait">Wait for Location</string>
    <string name="boundaryOnlyTwo">Select two formations</string>
    <string name="noGps">Position not determined yet</string>
    <string name="title_formation_database">Formation Database</string>
    <string name="mask_formation_name">Name of Formation</string>
    <string name="save_button">Save</string>
    <string name="save_and_exit_button">Save and Exit</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="acc">Accuracy</string>
    <string name="current_location">Current Location:</string>
    <string name="boundary">Boundary</string>
    <string name="formationLeft">Formation left</string>
    <string name="formationRight">Formation right</string>
    <string name="dip">Dip Angle</string>
    <string name="strike">Strike</string>
    <string name="overview">Overview</string>
    <string name="outcrop">Outcrop</string>
    <string name="strikeDip"><![CDATA[Strike&Dip]]></string>
    <string name="deleteThisFromation">Delete this Formation</string>
    <string name="strikeDipDescription">Place smartphone on surface and rotate untill Pitch is close to zero</string>
    <string name="dipDir">Dip Direction</string>
    <string name="exportSuccess">Export Successful</string>
    <string name="pitch">Pitch</string>
    <string name="selectFormation">Select a Formation</string>
    <string name="errorExport">Error during Database Export</string>
    <string name="emailSubject">Kartierpartner Database Export</string>
    <string name="emailChooser">Send email via...</string>
    <string name="deleteProject">Delete the entire Project</string>
    <string name="deleteProjectText">Do you really want to delete all Measurements taken and all the Formations?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="btnSaveSd">Save to SD</string>
    <string name="btnEmail">Send Database via Email</string>
    <string name="btnReset">Delete Project</string>
    <string name="descSaveSD">You can save your Measurements to SD card by clicking "Save to SD" Button</string>
    <string name="descSendEmail">You can also send your Measurements directly via email</string>
    <string name="descResetProject">!ATTENTION! here you can delete the whole Database</string>
    <string name="deleteFormation">Delete Formation</string>
    <string name="deleteFormationText">Do you want to delete this Formation?</string>
    <string name="allowLocation">Kartierpartner needs your location to work properly</string>
    <string name="allowWrite">Kartierpartner needs your permission to save Data on the SD Card</string>

</resources>
